--- a/001 CALULO Aliq ISS/style.css
+++ b/001 CALULO Aliq ISS/style.css
@@ -14,6 +14,7 @@ body{
     background: rgb(98, 203, 238) url('imagens/conta.jpg') center center no-repeat fixed;
     background-size: cover;
 }
+
 .container#q1{
    background-color: white;
    position: absolute;
@@ -24,16 +25,42 @@ body{
    transform: translate(-50%, -50%);
    left: 50%;
    top: 50%;
+   text-align: center;
 }
 
-.container{
+#q2{
+    background-color: rgb(66, 166, 237);
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0px 3px 5px rgb(100, 98, 98);
+}
+
+#iss,#q3{
+    text-align: center;
+    padding-top: 10px;
+}
+
+.container#a1,#aliquota{
     display: inline-block;
+    padding-top: 10px;
 }
 
-#q3 h3{
-    margin: auto;
+#aliquota{
+    color: red;
+    
 }
 
+p{
+    border: 1px solid black;
+    border-radius: 5px;
 
+}
 
+#tab2,#tab4{
+    width: 70px;
+}
 
+#tab1,#tab2,#tab3,#tab4{
+    text-align: center;
+}
